--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "flash": "^1.1.0",
     "mongoose": "^8.6.1",
     "passport": "^0.7.0",
